--- a/index.html
+++ b/index.html
@@ -5,6 +5,79 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yusuf Bello | Projects Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
+   <style>
+    /* Smooth scrolling */
+    html {
+      scroll-behavior: smooth;
+    }
+
+    /* Global font */
+    body {
+      font-family: 'Poppins', sans-serif;
+    }
+
+    /* Navbar styling */
+    header {
+      transition: all 0.3s ease;
+    }
+    header.scrolled {
+      background: rgba(255, 255, 255, 0.9);
+      backdrop-filter: blur(10px);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    /* Hero section animations */
+    #home h2 {
+      animation: fadeInDown 1s ease-in-out;
+    }
+    #home p {
+      animation: fadeInUp 1.5s ease-in-out;
+    }
+    #home a {
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    #home a:hover {
+      transform: scale(1.05);
+      box-shadow: 0 6px 15px rgba(0,0,0,0.2);
+    }
+
+    /* Project cards */
+    #projects .p-6 {
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    #projects .p-6:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+    }
+
+    /* Contact links */
+    #contact a {
+      position: relative;
+    }
+    #contact a::after {
+      content: "";
+      position: absolute;
+      width: 0;
+      height: 2px;
+      bottom: -2px;
+      left: 0;
+      background-color: #2563eb; /* Tailwind blue-600 */
+      transition: width 0.3s ease;
+    }
+    #contact a:hover::after {
+      width: 100%;
+    }
+
+    /* Keyframes for hero text */
+    @keyframes fadeInDown {
+      from { opacity: 0; transform: translateY(-30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
 
@@ -77,12 +150,14 @@
 
         <div class="p-6 bg-white rounded-xl shadow hover:shadow-lg transition">
           <h4 class="text-xl font-semibold text-blue-600 mb-2">Password Strength Checker</h4>
-          <p class="text-gray-600">Tool to evaluate password strength and estimate crack time by brute force.</p>
+          <p class="text-gray-600">Tool to evaluate password strength and estimate crack time by brute force.
+            <br><a href="e.html" class="text-blue-600 hover:underline">test it out</a></p>
         </div>
 
         <div class="p-6 bg-white rounded-xl shadow hover:shadow-lg transition">
           <h4 class="text-xl font-semibold text-blue-600 mb-2">Phishing Email Detector</h4>
-          <p class="text-gray-600">System that detects, analyzes, and educates users against phishing email attacks.</p>
+          <p class="text-gray-600">System that detects, analyzes, and educates users against phishing email attacks.
+            <br><a href="pi.html" class="text-blue-600 hover:underline">test it out</a></p>
         </div>
 
         <div class="p-6 bg-white rounded-xl shadow hover:shadow-lg transition">
