--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <!-- Navigation Bar -->
   <header class="bg-white shadow-md fixed top-0 left-0 w-full z-50">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-      <h1 class="text-xl font-bold text-blue-700">Yusuf Bello</h1>
+      <h1 class="text-xl font-bold text-blue-700">Yusuf Bello Alani</h1>
       <nav>
         <ul class="flex space-x-6">
           <li><a href="#home" class="hover:text-blue-600">Home</a></li>
@@ -203,9 +203,9 @@
   <section id="contact" class="max-w-4xl mx-auto px-6 py-20 text-center">
     <h3 class="text-3xl font-bold mb-6">Contact</h3>
     <p class="text-gray-600 mb-4">Interested in collaborating or learning more about my work? Reach me via:</p>
-    <p class="text-gray-800 font-semibold">📧 Email: your-email@example.com</p>
-    <p class="text-gray-800 font-semibold">🔗 LinkedIn: <a href="#" class="text-blue-600 hover:underline">linkedin.com/in/yusuf-bello</a></p>
-    <p class="text-gray-800 font-semibold">💻 GitHub: <a href="#" class="text-blue-600 hover:underline">github.com/yourusername</a></p>
+    <p class="text-gray-800 font-semibold">📧 Email:yusufbello770@gmail.com</p>
+    <p class="text-gray-800 font-semibold">🔗 LinkedIn: <a href="#" class="text-blue-600 hover:underline">linkedin</a></p>
+    <p class="text-gray-800 font-semibold">💻 GitHub: <a href="https://github.com/yusufbello770" class="text-blue-600 hover:underline">github</a></p>
   </section>
 
   <!-- Footer -->
