--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
     <h3 class="text-3xl font-bold mb-6">Contact</h3>
     <p class="text-gray-600 mb-4">Interested in collaborating or learning more about my work? Reach me via:</p>
     <p class="text-gray-800 font-semibold">📧 Email:yusufbello770@gmail.com</p>
-    <p class="text-gray-800 font-semibold">🔗 LinkedIn: <a href="#" class="text-blue-600 hover:underline">linkedin</a></p>
+    <p class="text-gray-800 font-semibold">🔗 LinkedIn: <a href="https://ng.linkedin.com/in/bello-yusuf" class="text-blue-600 hover:underline">linkedin</a></p>
+    <p class="text-gray-800 font-semibold">🔗 Website: <a href="https://yusufbe.vercel.app/" class="text-blue-600 hover:underline">Personal Portfolio</a></p>
     <p class="text-gray-800 font-semibold">💻 GitHub: <a href="https://github.com/yusufbello770" class="text-blue-600 hover:underline">github</a></p>
   </section>
 
