--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
           <li><a href="#about" class="hover:text-blue-600">About</a></li>
           <li><a href="#projects" class="hover:text-blue-600">Projects</a></li>
           <li><a href="#contact" class="hover:text-blue-600">Contact</a></li>
+          <li><a href="de.html" class="hover:text-blue-600">JET Club</a></li>
         </ul>
       </nav>
     </div>
